# urlaudit

./: .gitignore  README.md  pyproject.toml  test_urlaudit.py  urlaudit.py
.github/workflows/: ci.yml  publish.yml
examples/: safe.txt  suspicious.txt
