[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "urlaudit"
version = "1.0.0"
description = "URL Security Analyzer — detect phishing, homographs, and suspicious URLs"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Kris Kimmerle"}]
keywords = ["url", "security", "phishing", "homograph", "typosquatting", "idn", "scanner", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/kriskimmerle/urlaudit"
Repository = "https://github.com/kriskimmerle/urlaudit"

[project.scripts]
urlaudit = "urlaudit:main"
